# fts_fastapi

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: merge_develop.yml  merge_main.yml  push_develop.yml  push_main.yml
alembic/: env.py
alembic/fixtures/: posts.json
alembic/versions/: 2025_06_04_2113-3f602d66965b_1_add_posts.py
src/: .env.example  .env.test.example  api_constants.py  base_schemas.py  config.py  database.py  dependencies.py  main.py
src/posts/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_constants.py
tests/integration/: conftest.py
tests/integration/posts/: posts_router_test.py
